--- a/config/database.yml
+++ b/config/database.yml
@@ -19,6 +19,7 @@ default: &default
   encoding: unicode
   username: chayon
   password: 1234
+  host: localhost
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
